# ChangeLog for net-mail/mailbase
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/mailbase/ChangeLog,v 1.76 2012/04/26 14:21:12 aballier Exp $

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> mailbase-1.ebuild:
  keyword ~amd64-fbsd

  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> mailbase-0.00-r6.ebuild,
  mailbase-1.ebuild:
  Drop to ~mips

  14 Nov 2007; Mike Frysinger <vapier@gentoo.org> mailbase-1.ebuild:
  Move mail user/group and postmaster user here from baselayout.

  17 Jun 2007; Fernando J. Pereda <ferdy@gentoo.org> mailbase-1.ebuild:
  Don't mix ewarn and echo as per bug #182348

  08 Feb 2007; Fabian Groffen <grobian@gentoo.org> mailbase-0.00-r6.ebuild,
  mailbase-1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  06 Jan 2007; Timothy Redaelli <drizzt@gentoo.org> mailbase-1.ebuild:
  Added stat for BSD wrt bug #153869, acknowledged by Fernando J. Pereda

  06 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org>
  -mailbase-0.00-r4.ebuild, -mailbase-0.00-r5.ebuild,
  -mailbase-0.00-r7.ebuild, -mailbase-0.00-r8.ebuild,
  -mailbase-0.00-r9.ebuild:
  QA: Clean unused versions.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> mailbase-1.ebuild:
  Added ~sparc-fbsd keyword.

  03 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> mailbase-1.ebuild:
  Add ~x86-fbsd keyword.

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org> mailbase-1.ebuild:
  stable on ia64

  19 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> mailbase-1.ebuild:
  Stable on ppc.

  09 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> mailbase-1.ebuild:
  Stable on mips.

  09 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> mailbase-1.ebuild:
  Stable on amd64.

  08 Aug 2005; Markus Rothe <corsair@gentoo.org> mailbase-1.ebuild:
  Stable on ppc64

  03 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org> mailbase-1.ebuild:
  Stable on sparc

  03 Aug 2005; Fernando J. Pereda <ferdy@gentoo.org> mailbase-1.ebuild: