@@ -1,18 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX aliases 809 RMD160 ebca326bf7ed746a545f2bfa8f2839a5ecf1debb SHA1 7d8d134e21df6bea63518953dfa97fc0aab32f3c SHA256 41fffc461dfa6a8c36564698b4d9eaabaf280dbc446b3e7f3af4820930e687d6
-AUX common-pamd 417 RMD160 3a1e4ab95deb3e4326337403cb3d05912e130cd3 SHA1 40744d25bc66f89344049c74e7d87e0f9495fd91 SHA256 bbfe6375738fceacb4f6226ede08f7b9b0b280bf83d1b8b8e55e2e1f03b4090c
-AUX common-pamd-include 362 RMD160 a2615a3f09be6039430851bcf52f6ae77414aa20 SHA1 62ce37bdd86d18f10867d4b57ffcc46f751327fd SHA256 31b97438e6735ee4754051b95d926468f59fe8e15490e8bf34debaeaf3f8c651
-AUX mailcap 2235 RMD160 cb84573fec9e1c78f43a8eed2f9a0898c3817097 SHA1 f6405002211445186e2178ca23773695666bc2ce SHA256 99dcf0c43b9aa26625a8ff7e375e13f85cc0d677a93e90da62a868d8a2162cda
-EBUILD mailbase-0.00-r6.ebuild 892 RMD160 fab573e8c7abc22547031b1d540128827db0f51e SHA1 d23d5bc78401f139e41a839f2a7a6b091430016a SHA256 d8034f0a1dffd88dd419507cfb40a0159c5cd815590df429678927f221f94b15
-EBUILD mailbase-1.ebuild 1719 RMD160 034dea4090cf04f69bb7c44cf29e096cf5435ded SHA1 eee25303d3ce542edaa227ba6fc2de2a09e2b6ea SHA256 753127b2ef7a54caabe731ffaff3e38314eea3b1bd8e5395fc541abfc47ab525
-MISC ChangeLog 8783 RMD160 23e82117e54bcce7c1c22ca75cfb920fbbb9c235 SHA1 891e71c29295f0d9680054b60b50cae4265b2e59 SHA256 7fd3bdb2ee31215104230fd5d598cfaec9357196c8a8ba77d82ebe37ef5af0ce
-MISC metadata.xml 161 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 SHA1 a1fecd2f7b169d621b88c6ccab9d758209fc8f19 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32
+AUX aliases 809 SHA256 41fffc461dfa6a8c36564698b4d9eaabaf280dbc446b3e7f3af4820930e687d6 SHA512 748dcdd4da9deba0a5c0925b67d98bb0e46d3ef651bb97a4be2ac34a683a9090bd11e5e3c28b69d0309f806a4f60aa826e4d940e7549ac636196cd2ac4bbef2d WHIRLPOOL df43ef804c3ee035f3caa8fec55ddc77d1f66acbd21df6e059599289c9e47e4c81a772d8f2cc05fea240e9b64dfffea682b674d9d73f47c58fb78a93a9057682
+AUX common-pamd 417 SHA256 bbfe6375738fceacb4f6226ede08f7b9b0b280bf83d1b8b8e55e2e1f03b4090c SHA512 4c2bd23b8235bdf611567186e38a42d74c0fadf2771c79cd554f7558184f53812accb32304964a1724014624ab70d5499076db1bb5c4396f69d1e2167163d045 WHIRLPOOL 1d37ca5dde77da9f0fa39971bb8f4a470d88d16a9fdf84bbd995111c31baccc0be2801b4ef0167936a88eabde9b9a405c0396e36f28db55b1f9454e08eb83352
+AUX common-pamd-include 362 SHA256 31b97438e6735ee4754051b95d926468f59fe8e15490e8bf34debaeaf3f8c651 SHA512 18464c53b030d294e4c40880e014917ceada3ebfedb28aada8919dd45ef372af4443cfc7e0770617620f029b8d0a0bab44d0ec8d7e7b9af58c37d7eb5daa0afa WHIRLPOOL 2dbd60dc50ade2977bad72371221de580607e8c13f31b08382ab0a04c0bed3a998b0c1c53d8d78ab23752cf832c1536a25fa54fea2f3dc0b102d4ca25d480625
+AUX mailcap 2235 SHA256 99dcf0c43b9aa26625a8ff7e375e13f85cc0d677a93e90da62a868d8a2162cda SHA512 1461deb4f065c0d1778acbbcb1e08db821740de0363d3905a569d45d459a76d8813ef1c2c052d6e84b4b9b5576c89e524ecf44a9fffd8e05e91f85eb917557b0 WHIRLPOOL 888c53ea5a2623f3f8bf5d4ac91aac2ff8f78528be8c8b2c4fd8c3b77fd8a7e7d295c0a0ebc31d881d9226a758b43183fd269704c015526f7d45acbed577ee34
+EBUILD mailbase-0.00-r6.ebuild 892 SHA256 d8034f0a1dffd88dd419507cfb40a0159c5cd815590df429678927f221f94b15 SHA512 8b4a96d313609ae263b25682a9fd988224e1becc57dd3bfb9f001631892fb68bde83429600fa84ced2762e3c756e7a28f27a8eb2724718823bfe1154b5b3930c WHIRLPOOL 08d8b38210b4615e9b7c02a52a1d6faea84101ebde0e55dc5eaf138c4be5effe4b6c831f024c9771d7e1a0c688b208ccad43ce694e1dbb52d48ccb60a81ce86a
+EBUILD mailbase-1.1.ebuild 1778 SHA256 43e2aba95aea3e4259e2c1dcb4d6ac4dd17984e446f9946b3efdadf95389d5e5 SHA512 a81bbdad5c08628d9f605e30294bc36fb05aef0d8a65742fda332a5ea05f441508e0cd6dc59037504d4b704d3015f855223733f0720b494d8c75b38be5081de6 WHIRLPOOL 1ac7fd551fb3564e5a56f21b54f8ba65bc3ff981c53e68b9c98f9646af2e4a370038afcf97f5cf7da6dc29cc578d8fee1923cae2a9bebbb5db88d0709d2ba980
+EBUILD mailbase-1.ebuild 1719 SHA256 753127b2ef7a54caabe731ffaff3e38314eea3b1bd8e5395fc541abfc47ab525 SHA512 f4a7ba0cc25b23fea10cee0672eddeb4a8ac0dadcc31f7013fa9444facfe900ca6a68e7d45aa89fcba475fd3042c7590642ea8fadba5e54d25c555d80f744fa3 WHIRLPOOL 9ab79acac4fe7d9bd6acf9c16958c98df980218750a7d5922f7c74a3347f7e08d204f51d536821f0c23df5e48550602cc1f422e677d574df27dd644898821b48
+MISC ChangeLog 8980 SHA256 adc105bd03f290f18e875b5f5eebd4a701ce122014406f4d0d5c8a80fcdf726f SHA512 c1e2fb7dbf02886eb443226706355fa75318aca6b24f3bf6294acd04f82a3bbec4294487ef1cffe591de1246116c98eb8adde21243c93d0c61470fa01bbbaf1c WHIRLPOOL 5811a2cdcabf29ea88bc9731e64d448d3eee6c620626f5211f97843070d1175098262180b3df0d351799ceb7923e31955ba969f47ad37f228f0e9d9ec451c094
+MISC metadata.xml 161 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32 SHA512 77001eed8032a3b919c30d8dd9314951d3471528e770ef5ad840060e217037f5e1f0eb2cf4c5f90cb2d58e9598c8a38619a1301f890d6dd734900ab6273fb6ec WHIRLPOOL 0d251627fdbf63b5c090313d5bbf3e45acf630331742dc930a0136cc382b7720fe4099c64fd439fd31fe0eed48a4199d6e31692dbdedd34f803f9e2567d46975
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk+ZWd4ACgkQvFcC4BYPU0oUzwCgmbQsskmK7NmXaKlaUx0+4BPE
-6v4An2Z7XZlyHdNdgNdPYAHezzwAjLo6
-=lciM
+iQIcBAEBCAAGBQJQeIwNAAoJEHfx8XVYajsfVLIP/007ans8P715pgcvGH+pXjei
+k2v2fRqSqf4mz56ZwJAeF64i7OnF/bTtfUGLQXegapMIgsygjqlE7QTiXpH4DVLj
+JIGalQMC9mI+SrlReg2v1cpDmyguMBlWAp4Pt0fIBeE9fJ0AtRSUhWuWFHptZT9l
+6xVBsoV7UBeZn/cdAeSOZWYre6TZ9j1Uyf8WyyiKxO5CIa6L37H7UD6pzB/vDIWl
+jcOpROP65G7lxkZkbvoebaRUASXeKlE+bVEKbvBlJnaig05UDbNBtwrPbecKJyvr
+D2aujKZFEUjvzVVkT4UhPyXPTEsdKWAj9t3KESpidtUWtcP6gZCw6prnj1xFf6Jz
+HfaYET2HR7ABNdfoVVJuD9gBERWE4eS1iAyJpRlGNbSCVh7fN9XXRfv7Nyq0VX6V
+5O3aK8JjYuQsEp17/PuWEEM9HPx38N4OQnMQ8ErPSLMUAckptRJaucReJmSRxReZ
+a2VcTlTPapenDNWffqH6vCUO2d4/Yw/cWhalg1/o7xHupzSByyCl/H7ciW+9eZe/
+UAYDKWqLzNEVIGF1uvT23mauL/c9sotCszeNQkWqTeD6k8BCufhJuzCysPCr3Jk8
+LGN65kpW4ohtaCmyfvMq3Xcs5ZfD4G57a56wqiGKQIa0IMJdKSxql2I/ScSTn2by
+zzUicWTBVcvd95MEltx5
+=pArt
 -----END PGP SIGNATURE-----
